# GAOL

./: AUTHORS  BUGS  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  README.md  configure  configure.ac  gaol.spec.in  version.h
check/: Makefile.am  Makefile.in  arithmetic.cpp  assignment.cpp  constants.cpp  constructor.cpp  essai.cpp  float_functions.cpp  fpu.cpp  gaolcc.in  generic_functions.cpp  input_output.cpp  interval2f.cpp  interval_functions.cpp  intervalf.cpp  misc.cpp  non_arithmetic.cpp  performance_test_set.cpp  performance_test_set.h  performances.cpp  performances_result.txt  relations.cpp  reverse_mappings.cpp  tests.h  trigonometric.cpp
doc/: Makefile.am  Makefile.in  gaol.bib  gaol.tex  gaol_doxygen.cfg.in  gaol_version.tex.in  lgpl.tex  manual.cls  marginbib.sty  pdftex.cfg  relation-cos.tex
doc/include/: lgpl.texi
examples/: Goldstein_Price.cpp  Makefile.am  Makefile.in
gaol/: Makefile.am  Makefile.in  dllmain.cpp  gaol  gaol.h  gaol_allocator.h  gaol_assert.h  gaol_common.cpp  gaol_common.h  gaol_config.h  gaol_config_mingw.h  gaol_config_msvc.h  gaol_configuration.h.in  gaol_double_op_apmathlib.h  gaol_double_op_crlibm.h  gaol_double_op_m.h  gaol_eval_stack.h  gaol_exact.c  gaol_exact.h  gaol_exceptions.cpp  gaol_exceptions.h  gaol_expr_eval.h  gaol_expr_visitor.h  gaol_expression.cpp  gaol_expression.h  gaol_flags.h  gaol_flt_output.cpp  gaol_flt_output.h  gaol_fpu.h  gaol_fpu_fenv.h  gaol_fpu_msvc.h  gaol_generator_mul_i2f.py  gaol_init_cleanup.cpp  gaol_init_cleanup.h  gaol_interval.cpp  gaol_interval.h  gaol_interval2f.cpp  gaol_interval2f.h  gaol_interval_fpu.cpp  gaol_interval_fpu.h  (+21 more)
gaol/sysdeps/: gaol_exact_c99.h  gaol_exact_msvc.h
gdtoa/: AUTHORS  Makefile.am  Makefile.in  dtoa.c  gdtoa.h  gdtoaimp.h  strtod.c
gdtoa/test/: Makefile.am  Makefile.in  gdtoatests.sh
templates/: cpp  h
